--- a/jx-requirements.yml
+++ b/jx-requirements.yml
@@ -3,15 +3,13 @@ autoUpdate:
   schedule: ""
 bootConfigURL: https://github.com/hibobio/environment-hibob-stage-dev-new-dev
 cluster:
-  clusterName: hibob-stage-dev-new
-  environmentGitOwner: hibobio
-  gitKind: github
-  gitName: github
-  gitServer: https://github.com
-  namespace: jx
-  provider: eks
-  region: eu-west-1
-  registry: 242867168342.dkr.ecr.eu-west-1.amazonaws.com
+  clusterName: ""
+  environmentGitOwner: ""
+  project: ""
+  provider: gke
+  zone: ""
+  environmentGitPublic: false
+gitops: true
 environments:
 - ingress:
     domain: hibob.com
