--- a/env/jxboot-resources/values.tmpl.yaml
+++ b/env/jxboot-resources/values.tmpl.yaml
@@ -67,6 +67,25 @@ gitops:
     dockerRegistryOrg: ""
 {{- end }}
 
+
+  staging:
+    repo: "{{ .Environments.staging.repository }}"
+    owner: "{{ .Environments.staging.owner | default .Requirements.cluster.environmentGitOwner }}"
+    server: ""
+    namespace: {{ .Requirements.cluster.namespace | default "jx" }}-staging
+{{- if hasKey .Environments.staging "remoteCluster" }}
+    remote: {{ .Environments.staging.remoteCluster | default "false" }}
+{{- end }}
+
+  production:
+    repo: "{{ .Environments.production.repository }}"
+    owner: "{{ .Environments.production.owner | default .Requirements.cluster.environmentGitOwner }}"
+    server: ""
+    namespace: {{ .Requirements.cluster.namespace | default "jx" }}-production
+{{- if hasKey .Environments.production "remoteCluster" }}
+    remote: {{ .Environments.production.remoteCluster | default "false" }}
+{{- end }}
+
 storage:
   logs:
     url: "{{ .Requirements.storage.logs.url }}"
