--- a/jx-requirements.yml
+++ b/jx-requirements.yml
@@ -14,9 +14,9 @@ cluster:
   registry: 242867168342.dkr.ecr.eu-west-1.amazonaws.com
 environments:
 - ingress:
-    domain: 34.249.143.66.nip.io
-    externalDNS: false
-    namespaceSubDomain: -jx.
+    domain: jx.hibob.com
+    externalDNS: true
+    namespaceSubDomain: ""
     tls:
       email: ""
       enabled: false
@@ -41,11 +41,6 @@ environments:
       production: false
   key: production
 gitops: true
-ingress:
-  domain: 34.249.143.66.nip.io
-  externalDNS: false
-  namespaceSubDomain: -jx.
-=======
 cluster:
   clusterName: ""
   environmentGitOwner: ""
@@ -53,17 +48,6 @@ cluster:
   provider: gke
   zone: ""
 gitops: true
-environments:
-- key: dev
-- key: staging
-- key: production
-ingress:
-  domain: ""
-  externalDNS: false
-  tls:
-    email: ""
-    enabled: false
-    production: false
 kaniko: true
 repository: bucketrepo
 secretStorage: local
