--- a/jx-requirements.yml
+++ b/jx-requirements.yml
@@ -3,15 +3,11 @@ autoUpdate:
   schedule: ""
 bootConfigURL: https://github.com/hibobio/environment-hibob-eks-eu-west-1-dev
 cluster:
-  clusterName: hibob-stage-dev-new
-  environmentGitOwner: hibobio
   gitKind: github
   gitName: github
   gitServer: https://github.com
   namespace: jx
   provider: eks
-  region: eu-west-1
-  registry: 242867168342.dkr.ecr.eu-west-1.amazonaws.com
 environments:
 - ingress:
     domain: jx.hibob.com
@@ -41,13 +37,14 @@ environments:
       production: false
   key: production
 gitops: true
-cluster:
-  clusterName: ""
-  environmentGitOwner: ""
-  project: ""
-  provider: gke
-  zone: ""
-gitops: true
+ingress:
+  domain: ""
+  externalDNS: false
+  namespaceSubDomain: -jx.
+  tls:
+    email: ""
+    enabled: false
+    production: false
 kaniko: true
 repository: bucketrepo
 secretStorage: local
