--- a/jx-requirements.yml
+++ b/jx-requirements.yml
@@ -14,7 +14,7 @@ cluster:
   registry: 242867168342.dkr.ecr.eu-west-1.amazonaws.com
 environments:
 - ingress:
-    domain: 34.255.222.199.nip.io
+    domain: jx.hibob.com
     externalDNS: false
     namespaceSubDomain: -jx.
     tls:
