--- a/jx-requirements.yml
+++ b/jx-requirements.yml
@@ -3,6 +3,7 @@ autoUpdate:
   schedule: ""
 bootConfigURL: https://github.com/hibobio/environment-hibob-stage-dev-new-dev
 cluster:
+  chartRepository: http://bucketrepo/bucketrepo/charts/
   clusterName: hibob-stage-dev-new
   environmentGitOwner: hibobio
   gitKind: github
@@ -15,31 +16,20 @@ cluster:
 environments:
 - ingress:
     domain: jx.hibob.com
-    externalDNS: false
-    namespaceSubDomain: -jx.
-    tls:
-      email: ""
-      enabled: false
-      production: false
+    externalDNS: true
+    namespaceSubDomain: jx
   key: dev
 - ingress:
     domain: staging.hibob.com
     externalDNS: true
     namespaceSubDomain: staging
-    tls:
-      email: ""
-      enabled: false
-      production: false
   key: staging
+- ingress:
+    domain: prod.hibob.com
+    externalDNS: true
+    namespaceSubDomain: prod
+  key: production
 gitops: true
-ingress:
-  domain: ""
-  externalDNS: false
-  namespaceSubDomain: -jx.
-  tls:
-    email: ""
-    enabled: false
-    production: false
 kaniko: true
 repository: bucketrepo
 secretStorage: local
