--- a/jx-requirements.yml
+++ b/jx-requirements.yml
@@ -17,34 +17,16 @@ environments:
 - ingress:
     domain: jx.hibob.com
     externalDNS: true
-    namespaceSubDomain: -jx.
+    namespaceSubDomain: jx
     tls:
       email: ""
       enabled: false
       production: false
   key: dev
-- ingress:
-    domain: staging.hibob.com
-    externalDNS: true
-    namespaceSubDomain: staging
-    tls:
-      email: ""
-      enabled: false
-      production: false
-  key: staging
-- ingress:
-    domain: prod.hibob.com
-    externalDNS: true
-    namespaceSubDomain: prod
-    tls:
-      email: ""
-      enabled: false
-      production: false
-  key: production
 gitops: true
 ingress:
-  domain: jx.hibob.com
-  externalDNS: true
+  domain: ""
+  externalDNS: false
   namespaceSubDomain: -jx.
   tls:
     email: ""
