chore(config): update configuration

--- a/systems/jxing/values.yaml
+++ b/systems/jxing/values.yaml
@@ -5,6 +5,9 @@ nginx-ingress:
       publish-service: kube-system/jxing-nginx-ingress-controller
     service:
       omitClusterIP: true
+      annotations:
+        service.beta.kubernetes.io/aws-load-balancer-ssl-cert: arn:aws:acm:eu-west-1:242867168342:certificate/7731015f-3053-4f30-829f-40c542243d1f
+        service.beta.kubernetes.io/aws-load-balancer-type: nlb
   defaultBackend:
     service:
       omitClusterIP: true
