--- a/env/hibob-jx/values.yaml
+++ b/env/hibob-jx/values.yaml
@@ -2,6 +2,8 @@ jenkins:
   Master:
     Cpu: "400m"
     Memory: "1Gi"
+    Image: "242867168342.dkr.ecr.eu-west-1.amazonaws.com/jx-master"
+    ImageTag: "latest"
   Agent:
     KubernetesServerURL: "https://kubernetes.default:443"
     PodTemplates:
