--- a/env/templates/stageenv.yaml
+++ b/env/templates/stageenv.yaml
@@ -3,15 +3,15 @@ kind: Environment
 metadata:
   creationTimestamp: "2019-11-26T17:26:07Z"
   generation: 2
-  name: staging
+  name: stage
   namespace: jx
   resourceVersion: "20397302"
   selfLink: /apis/jenkins.io/v1/namespaces/jx/environments/staging
   uid: d4ec4827-1071-11ea-a89a-06a2e1be5c58
 spec:
   kind: Permanent
-  label: Staging
-  namespace: jx-staging
+  label: Stage
+  namespace: stage
   order: 100
   previewGitInfo:
     user: {}
