--- a/jx-requirements.yml
+++ b/jx-requirements.yml
@@ -15,7 +15,7 @@ cluster:
   registry: 242867168342.dkr.ecr.eu-west-1.amazonaws.com
 environments:
 - ingress:
-    domain: hibob.com
+    domain: jx.hibob.com
     externalDNS: false
     namespaceSubDomain: -jx.
     tls:
