--- a/jx-requirements.yml
+++ b/jx-requirements.yml
@@ -15,7 +15,7 @@ cluster:
   registry: 242867168342.dkr.ecr.eu-west-1.amazonaws.com
 environments:
 - ingress:
-    domain: jx.hibob.com
+    domain: hibob.com
     externalDNS: false
     namespaceSubDomain: -jx.
     tls:
@@ -43,7 +43,7 @@ environments:
   key: prod
 gitops: true
 ingress:
-  domain: jx.hibob.com
+  domain: hibob.com
   externalDNS: false
   namespaceSubDomain: -jx.
   tls:
