chore(config): update configuration

--- a/env/templates/prodenv-sr.yaml
+++ b/env/templates/prodenv-sr.yaml
@@ -3,6 +3,7 @@ kind: SourceRepository
 metadata:
   annotations:
     jenkins.io/chart: env
+    resourceVersion: "483150"
   labels:
     jenkins.io/chart-release: jenkins-x
     jenkins.io/gitSync: "false"
