--- a/systems/external-dns/values.tmpl.yaml
+++ b/systems/external-dns/values.tmpl.yaml
@@ -2,12 +2,7 @@ external-dns:
   enabled: {{ .Requirements.ingress.externalDNS }}
   sources:
   - ingress
-  provider: google
-  google:
-    serviceAccountSecret: external-dns-gcp-sa
- {{- if hasKey .Requirements.cluster "project" }}
-    project: "{{ .Requirements.cluster.project }}"
- {{ end }}
+  provider: eks
   rbac:
     create: true
   domainFilters:
