chore(config): update configuration

--- a/jx-requirements.yml
+++ b/jx-requirements.yml
@@ -23,6 +23,15 @@ environments:
       enabled: false
       production: false
   key: dev
+- ingress:
+    domain: hibob.com
+    externalDNS: true
+    namespaceSubDomain: ""
+    tls:
+      email: ""
+      enabled: false
+      production: false
+  key: prod
 gitops: true
 ingress:
   domain: hibob.com
