--- a/env/jenkins-x-platform/values.tmpl.yaml
+++ b/env/jenkins-x-platform/values.tmpl.yaml
@@ -95,7 +95,7 @@ jenkins:
             LimitMemory: "1024Mi"
             Tty: true
           Scala:
-            Image: 242867168342.dkr.ecr.eu-west-1.amazonaws.com/jx-builders/scala:2.1
+            Image: gcr.io/jenkinsxio/builder-scala:latest
             Privileged: true
             RequestCpu: "1"
             RequestMemory: "2Gi"
