--- a/systems/jxing/values.yaml
+++ b/systems/jxing/values.yaml
@@ -8,6 +8,8 @@ nginx-ingress:
       annotations:
         service.beta.kubernetes.io/aws-load-balancer-ssl-cert: arn:aws:acm:eu-west-1:242867168342:certificate/7731015f-3053-4f30-829f-40c542243d1f
         service.beta.kubernetes.io/aws-load-balancer-type: nlb
+      targetPorts:
+        https: http
   defaultBackend:
     service:
       omitClusterIP: true
