--- a/env/jenkins-x-platform/values.tmpl.yaml
+++ b/env/jenkins-x-platform/values.tmpl.yaml
@@ -150,7 +150,7 @@ jenkins:
             RequestMemory: "128Mi"
             Args: '${computer.jnlpmac} ${computer.name}'
           Scala:
-            Image: 242867168342.dkr.ecr.eu-west-1.amazonaws.com/jx-builders/scala:2.1
+            Image: gcr.io/jenkinsxio/builder-scala:latest
             Privileged: true
             RequestCpu: "1"
             RequestMemory: "2Gi"
@@ -213,7 +213,7 @@ jenkins:
             RequestMemory: "128Mi"
             Args: '${computer.jnlpmac} ${computer.name}'
           Scala:
-            Image: 242867168342.dkr.ecr.eu-west-1.amazonaws.com/jx-builders/scala:2.1
+            Image: gcr.io/jenkinsxio/builder-scala:latest
             Privileged: true
             RequestCpu: "1"
             RequestMemory: "2Gi"
@@ -276,7 +276,7 @@ jenkins:
             RequestMemory: "128Mi"
             Args: '${computer.jnlpmac} ${computer.name}'
           Scala:
-            Image: 242867168342.dkr.ecr.eu-west-1.amazonaws.com/jx-builders/scala:2.1
+            Image: gcr.io/jenkinsxio/builder-scala:latest
             Privileged: true
             RequestCpu: "1"
             RequestMemory: "2Gi"
@@ -339,7 +339,7 @@ jenkins:
             RequestMemory: "128Mi"
             Args: '${computer.jnlpmac} ${computer.name}'
           Scala:
-            Image: 242867168342.dkr.ecr.eu-west-1.amazonaws.com/jx-builders/scala:2.1
+            Image: gcr.io/jenkinsxio/builder-scala:latest
             Privileged: true
             RequestCpu: "1"
             RequestMemory: "2Gi"
@@ -404,6 +404,50 @@ jenkins:
             RequestMemory: "1Gi"
             LimitCpu: "2"
             LimitMemory: "2Gi"
+            # You may want to change this to true while testing a new image
+            # AlwaysPullImage: true
+            Command: "/bin/sh -c"
+            Args: "cat"
+            Tty: true
+      Jx-master-image:
+        Name: hibob-jx-master
+        Label: hibob-jx-master
+        NodeSelector:
+          kubernetes.io/lifecycle: spot
+        DevPodPorts: 5005, 8080
+        volumes:
+        - type: Secret
+          secretName: jenkins-docker-cfg
+          mountPath: /home/jenkins/.docker
+        - type: Secret
+          secretName: jenkins-release-gpg
+          mountPath: /home/jenkins/.gnupg
+        EnvVars:
+          JENKINS_URL: http://jenkins:8080
+          # _JAVA_OPTIONS: '-XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap -Dsun.zip.disableMemoryMapping=true -XX:+UseParallelGC -XX:MinHeapFreeRatio=5 -XX:MaxHeapFreeRatio=10 -XX:GCTimeRatio=4 -XX:AdaptiveSizePolicyWeight=90 -Xms500M -Xmx5G'
+          GIT_COMMITTER_EMAIL: jenkins-x@googlegroups.com
+          GIT_AUTHOR_EMAIL: jenkins-x@googlegroups.com
+          GIT_AUTHOR_NAME: jenkins-x-bot
+          GIT_COMMITTER_NAME: jenkins-x-bot
+          XDG_CONFIG_HOME: /home/jenkins
+          DOCKER_CONFIG: /home/jenkins/.docker/
+          POSTGRES_PASSWORD: test
+          POSTGRES_USER: postgres
+          POSTGRES_DB: test
+        ServiceAccount: jenkins
+        Containers:
+          Jnlp:
+            Image: jenkinsci/jnlp-slave:3.26-1-alpine
+            RequestCpu: "100m"
+            RequestMemory: "128Mi"
+            Args: '${computer.jnlpmac} ${computer.name}'
+          Base:
+            Image: gcr.io/jenkinsxio/builder-base:latest
+            Privileged: true
+            RequestCpu: "400m"
+            RequestMemory: "400Mi"
+            LimitCpu: "1"
+            LimitMemory: "1Gi"
             # You may want to change this to true while testing a new image
             # AlwaysPullImage: true
             Command: "/bin/sh -c"
