--- a/systems/jxing/values.yaml
+++ b/systems/jxing/values.yaml
@@ -7,7 +7,7 @@ nginx-ingress:
       omitClusterIP: true
       annotations:
         service.beta.kubernetes.io/aws-load-balancer-ssl-cert: arn:aws:acm:eu-west-1:242867168342:certificate/7731015f-3053-4f30-829f-40c542243d1f
-        service.beta.kubernetes.io/aws-load-balancer-type: nlb
+        service.beta.kubernetes.io/aws-load-balancer-backend-protocol: http
       targetPorts:
         https: http
   defaultBackend:
