--- a/env/jenkins-x-platform/values.tmpl.yaml
+++ b/env/jenkins-x-platform/values.tmpl.yaml
@@ -442,7 +442,7 @@ jenkins:
             RequestMemory: "128Mi"
             Args: '${computer.jnlpmac} ${computer.name}'
           Base:
-            Image: gcr.io/jenkinsxio/builder-base:latest
+            Image: gcr.io/jenkinsxio/builder-base:0.0.76
             Privileged: true
             RequestCpu: "400m"
             RequestMemory: "400Mi"
