--- a/env/templates/jenkins-ingress-override.yaml
+++ b/env/templates/jenkins-ingress-override.yaml
@@ -3,7 +3,8 @@ kind: Ingress
 metadata:
   annotations:
     kubernetes.io/ingress.class: nginx
-  name: jenkins-additional
+    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
+  name: jenkins
   namespace: jx
 spec:
   rules:
