--- a/systems/jxing/values.yaml
+++ b/systems/jxing/values.yaml
@@ -14,6 +14,7 @@ nginx-ingress:
         http: http
     config:
       use-forwarded-headers: "true"
+      redirect-to-https: "true"
   defaultBackend:
     service:
       omitClusterIP: true
