--- a/jenkins-x-bdd-vault.yml
+++ b/jenkins-x-bdd-vault.yml
@@ -29,7 +29,7 @@ pipelineConfig:
                 name: test-jenkins-user 
                 key: password
         agent:
-          image: gcr.io/jenkinsxio/builder-go-maven
+          image: gcr.io/jenkinsxio/builder-go:2.0.1101-437
         stages:
           - name: ci
             options:
