--- a/jx-requirements.yml
+++ b/jx-requirements.yml
@@ -9,7 +9,7 @@ cluster:
   gitName: github
   gitServer: https://github.com
   namespace: jx
-  provider: gke
+  provider: eks
   region: eu-west-1
   registry: 242867168342.dkr.ecr.eu-west-1.amazonaws.com
 environments:
