--- a/systems/jxing/values.tmpl.yaml
+++ b/systems/jxing/values.tmpl.yaml
@@ -7,7 +7,7 @@ nginx-ingress:
       omitClusterIP: true
 {{- if eq .Requirements.cluster.provider "eks" }}
       annotations:
-        service.beta.kubernetes.io/aws-load-balancer-type: nlb
+        #service.beta.kubernetes.io/aws-load-balancer-type: nlb
 {{- end }}
   defaultBackend:
     service:
