--- a/env/jenkins-x-platform/values.tmpl.yaml
+++ b/env/jenkins-x-platform/values.tmpl.yaml
@@ -34,6 +34,10 @@ nexus:
 {{- end }}
 
 jenkins:
+  Servers:
+    Global:
+      EnvVars:
+        DOCKER_REGISTRY: "242867168342.dkr.ecr.eu-west-1.amazonaws.com"
   Master:
     Cpu: "400m"
     Memory: "1Gi"
