fix: define the domains of all environments in the external-dns domain filters
Signed-off-by: Cosmin Cojocar <cosmin.cojocar@gmx.ch>

--- a/systems/external-dns/values.tmpl.yaml
+++ b/systems/external-dns/values.tmpl.yaml
@@ -16,4 +16,8 @@ external-dns:
     serviceAccountAnnotations:
       eks.amazonaws.com/role-arn: arn:aws:iam::242867168342:role/k8s-external-dns
   domainFilters:
-  - "{{ .Requirements.ingress.domain }}"
+{{- range .Requirements.environments }}
+ {{- if .ingress.domain }}
+  - "{{ .ingress.domain }}"
+  {{- end }}
+{{- end }}
