--- a/kubeProviders/eks/templates/irsa.tmpl.yaml
+++ b/kubeProviders/eks/templates/irsa.tmpl.yaml
@@ -22,3 +22,10 @@ iam:
       labels: {aws-usage: "jenkins-x"}
     attachPolicyARNs:
     - "arn:aws:iam::aws:policy/AmazonS3FullAccess"
+  - metadata:
+      name: jxui
+      namespace: jx
+      labels: {aws-usage: "jenkins-x"}
+    attachPolicyARNs:
+    - "arn:aws:iam::aws:policy/AmazonS3FullAccess"
+
