fix jenkins url

--- a/jx-requirements.yml
+++ b/jx-requirements.yml
@@ -60,6 +60,6 @@ terraform: true
 vault: {}
 velero: {}
 versionStream:
-  ref: 4f8fab369110fb9796ea5ec6e3ced44714cb344f
+  ref: v1.0.280
   url: https://github.com/jenkins-x/jenkins-x-versions.git
 webhook: jenkins
