--- a/systems/jxing/values.tmpl.yaml
+++ b/systems/jxing/values.tmpl.yaml
@@ -7,6 +7,9 @@ nginx-ingress:
       omitClusterIP: true
 {{- if eq .Requirements.cluster.provider "eks" }}
       annotations:
+        service.beta.kubernetes.io/aws-load-balancer-backend-protocol: http
+        service.beta.kubernetes.io/aws-load-balancer-ssl-cert: arn:aws:acm:eu-west-1:242867168342:certificate/95f7d35c-e993-47db-869c-caba9738ab49
+        service.beta.kubernetes.io/aws-load-balancer-ssl-ports: "https"
         #service.beta.kubernetes.io/aws-load-balancer-type: nlb
 {{- end }}
   defaultBackend:
