targetPorts https in systems/jxing/values.tmpl.yaml

--- a/systems/jxing/values.tmpl.yaml
+++ b/systems/jxing/values.tmpl.yaml
@@ -4,6 +4,8 @@ nginx-ingress:
     extraArgs:
       publish-service: kube-system/jxing-nginx-ingress-controller
     service:
+      targetPorts: 
+        https: http
       omitClusterIP: true
 {{- if eq .Requirements.cluster.provider "eks" }}
       annotations:
