--- a/systems/jxing/values.tmpl.yaml
+++ b/systems/jxing/values.tmpl.yaml
@@ -1,8 +1,8 @@
 nginx-ingress:
   controller:
     config:
-      redirect-to-https: true
-      use-forwarded-headers: true
+      redirect-to-https: "true"
+      use-forwarded-headers: "true"
     replicaCount: 3
     extraArgs:
       publish-service: kube-system/jxing-nginx-ingress-controller
