feat: upgrade version stream

--- a/jx-requirements.yml
+++ b/jx-requirements.yml
@@ -58,8 +58,10 @@ storage:
     url: s3://hibob-jenkinsx/repository
 terraform: true
 vault: {}
-velero: {}
+velero:
+  schedule: ""
+  ttl: ""
 versionStream:
-  ref: v1.0.280
+  ref: 9701b53e29210a0572e582d926eedfa51a36382a
   url: https://github.com/jenkins-x/jenkins-x-versions.git
 webhook: jenkins
