--- a/jenkins-x.yml
+++ b/jenkins-x.yml
@@ -4,7 +4,7 @@ pipelineConfig:
     pullRequest:
       pipeline:
         agent:
-          image: gcr.io/jenkinsxio/builder-go
+          image: gcr.io/jenkinsxio/builder-go:2.0.1173-511
         stages:
         - name: pr-checks
           options:
@@ -38,7 +38,7 @@ pipelineConfig:
     release:
       pipeline:
         agent:
-          image: gcr.io/jenkinsxio/builder-go
+          image: gcr.io/jenkinsxio/builder-go:2.0.1173-511
         environment:
         - name: DEPLOY_NAMESPACE
           value: jx
